--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <p class="part ">ЧАСТЬ 2</p>
           <h2 class="title">Где о них <span class="desktop-br"><br></span>можно узнать?</h2>
           <p class="description">
-            В России существует <body link="F13600" vlink="#cecece" alink="#f13600" bgcolor="black"><a href="https://museum.krastsvetmet.ru/"><strong>всего один интерактивный музей</strong></a><span class="desktop-br"><br></span> драгоценных металлов. Он находится в Красноярске на территории Красцветмета!
+            В России существует <body link="F13600" vlink="F13600" alink="#f13600" bgcolor="black"><a href="https://museum.krastsvetmet.ru/" target="_blank"><strong> всего один интерактивный музей</strong></a><span class="desktop-br"><br></span> драгоценных металлов. Он находится в Красноярске на территории Красцветмета!
           </p>
           <p class="description"></body>
             Посетить его может любой желающий: вход свободный. Для организованных групп <span class="desktop-br"><br></span> специалисты компании проводят экскурсии по предварительной записи. <span class="desktop-br"><br></span> Здесь можно узнать, как добывают, перерабатывают драгоценные металлы <span class="desktop-br"><br></span>
