--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div class="swiper-slide" style="background-image: url('sl1-5.jpg');">
           <div class="text-slide">
             <p>
-              Из чего извлекаются драгоценные металлы? Вы точно получите ответ на этот вопрос.
+              Из чего извлекаются драгоценные металлы? Вы точно получите ответ на этот вопрос
             </p>
           </div>
         </div>
